Collapse Div fixe

--- a/src/components/collapseComponent/collapse.css
+++ b/src/components/collapseComponent/collapse.css
@@ -24,7 +24,7 @@
     flex-grow: 1;
     margin: 10px;
     position: relative;
-    width: 100%;
+    /* width: 100%; */
     /* width: auto;
     width: 100vw; */
 }
